# python-queue-processing

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/grafana/dashboards/: queue-processing.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: datasources.yml
config/loki/: loki-config.yaml
config/prometheus/: prometheus.yml
postgres-init/: 01_create_db.sql
scripts/: load_test.py
src/: worker_main.py
src/app/: db.py  main.py  metrics.py  models.py  redis_client.py  schemas.py  worker.py
